<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="@dimen/dp10"
    android:layout_marginBottom="@dimen/dp17"
    android:orientation="horizontal">

    <com.jkcq.viewlibrary.ItemSportView
        android:id="@+id/item_time"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginRight="@dimen/dp5"
        android:layout_weight="1"
        app:sport_title_color="@color/common_rbtn_gray_color"
        app:sport_title_value="@string/sport_time_title"
        app:sport_type_icon="@drawable/icon_sport_time"
        app:sport_unitl_color="@color/common_text_color"
        app:sport_unitl_value="@string/sport_time_unitl"
        app:sport_value_color="@color/common_text_color" />

    <com.jkcq.viewlibrary.ItemSportView
        android:id="@+id/item_cal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/dp5"
        android:layout_marginRight="@dimen/dp5"
        android:layout_weight="1"
        app:sport_title_color="@color/common_rbtn_gray_color"
        app:sport_title_value="@string/sport_cal_title"
        app:sport_type_icon="@drawable/icon_cal"
        app:sport_unitl_color="@color/common_text_color"
        app:sport_unitl_value="@string/sport_cal_unitl"
        app:sport_value_color="@color/common_text_color" />

    <com.jkcq.viewlibrary.ItemSportView
        android:id="@+id/item_power"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="@dimen/dp5"
        android:layout_weight="1"
        app:sport_title_color="@color/common_rbtn_gray_color"
        app:sport_title_value="@string/sport_hw_title"
        app:sport_type_icon="@drawable/icon_hw"
        app:sport_unitl_color="@color/common_text_color"
        app:sport_unitl_value="@string/sport_hw_unitl"
        app:sport_value_color="@color/common_text_color" />
</LinearLayout>




