<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dp10"
    android:background="@drawable/shape_btn_white_20_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp20">


    <LinearLayout
        android:id="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp15">


        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:text="2020-11-22"
            android:textColor="@color/common_text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:text="0"
            android:textColor="@color/common_text_color"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_cal_unitl"
            android:textColor="@color/common_text_color"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text=" | "
            android:textColor="#D6D6DD"
            android:textSize="@dimen/sp16" />

        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="0"
            android:textColor="@color/common_text_color"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_times_unitl"
            android:textColor="@color/common_text_color"
            android:textSize="12sp" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_dis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="0"
            android:textColor="@color/common_text_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_dis_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sport_dis_unitl_km"
            android:textColor="@color/common_text_color"
            android:textSize="12sp" />


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <ImageView
            android:id="@+id/iv_arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp15"
            android:src="@drawable/icon_rope_down"
            android:textColor="@color/common_text_color"
            android:textSize="14sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp" />

</LinearLayout>

